# orbslam3_ros2_vendor

./: .gitmodules  CMakeLists.txt  README.md  package.xml
cmake/: apply_git_patch_idempotent.cmake
patches/orbslam3/: 0001-add-install-rules-and-link-targets.patch  0002-public-atlas-load-api.patch
patches/pangolin/: 0001-dedup-fonts.patch  0002-export-pangolin-target.patch
